[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-vendor-router"
version = "0.1.0"
description = "Category-routed data-fetch with automatic per-vendor fallback (yfinance, Alpaca, Benzinga, Polygon, Alpha Vantage)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AI-Trading-APP", email = "kasi@ascendsoft.co" }]
dependencies = [
    "pydantic>=2.6,<3.0",
    "httpx>=0.28",
    "pybreaker>=1.0",
    "opentelemetry-api>=1.25",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
vendors = [
    "yfinance>=0.2.40",
    "alpaca-py>=0.35",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "opentelemetry-sdk>=1.25",
    "ruff",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/data_vendor_router"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live_vendor: tests that hit real vendor APIs (excluded from default run)",
]
addopts = "-m 'not live_vendor'"
